# FlowtileWM

./: .gitignore  Cargo.toml  README.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/core-daemon/: Cargo.toml  build.rs
apps/core-daemon/src/: cli.rs  control.rs  ipc.rs  main.rs  manual_resize.rs  projection.rs  touchpad.rs  watch.rs
apps/core-daemon/src/hotkeys/: low_level.rs  mod.rs  native.rs  script.rs  trigger.rs
config/: flowtile.kdl
crates/config-rules/: Cargo.toml
crates/config-rules/src/: lib.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: events.rs  geometry.rs  ids.rs  lib.rs  model.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/layout-engine/: Cargo.toml
crates/layout-engine/src/: lib.rs
crates/windows-adapter/: Cargo.toml
crates/windows-adapter/scripts/: apply-geometry.ps1  observe-platform.ps1  scan-platform.ps1
crates/windows-adapter/src/: lib.rs  native_observer.rs
crates/wm-core/: Cargo.toml
crates/wm-core/config/: flowtile.kdl
crates/wm-core/src/: lib.rs  runtime.rs  state_store.rs
scripts/: bootstrap.ps1  check.ps1  run-dev-runtime-collector.ps1  start-dev-runtime.ps1  test-system.ps1
ui/ui-host/: App.xaml  App.xaml.cs  Flowtile.UiHost.csproj  MainWindow.xaml  MainWindow.xaml.cs
