[workspace]
members = [
  "apps/cli",
  "apps/core-daemon",
  "crates/config-rules",
  "crates/diagnostics",
  "crates/domain",
  "crates/ipc",
  "crates/layout-engine",
  "crates/windows-adapter",
  "crates/wm-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.94"
version = "0.0.3"

[workspace.dependencies]
flowtile-config-rules = { path = "crates/config-rules" }
flowtile-diagnostics = { path = "crates/diagnostics" }
flowtile-domain = { path = "crates/domain" }
flowtile-ipc = { path = "crates/ipc" }
flowtile-layout-engine = { path = "crates/layout-engine" }
flowtile-windows-adapter = { path = "crates/windows-adapter" }
flowtile-wm-core = { path = "crates/wm-core" }
