[package]
name = "flowtile-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "IPC transport and protocol types for FlowtileWM."

[dependencies]
flowtile-diagnostics.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Pipes",
] }
