[package]
name = "flowtile-windows-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Windows platform observation and geometry apply baseline for FlowtileWM."

[dependencies]
flowtile-domain.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
