[package]
name = "flowtile-windows-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Windows platform observation and geometry apply baseline for FlowtileWM."

[dependencies]
flowtile-diagnostics.workspace = true
flowtile-domain.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
